competitions fee changes

--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -1090,7 +1090,7 @@
           <h2 class="card-title">Freefire</h2>
           <p class="card-detail">Gear up, Freefire legends, and get ready to compete against the top gamers in this
             tournament as Wissenaire'24 is hosting a thrilling gaming tournament with prize money.<br>
-            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /person
+            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /team
           </p>
 
           <div class=" but">
@@ -1130,7 +1130,7 @@
           <p class="card-detail">A passionate gamer? Do weapons titillate you? Ready for a tough challenge? Team
             Wissenaire'24 Valorant Tournament sets kill-hungry gamers against each other. Do you have "Defy the limits"
             potential?<br>
-            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /person
+            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /team
           </p>
 
           <div class=" but">
@@ -1169,7 +1169,7 @@
           <h2 class="card-title">Battle Grounds: Mobile</h2>
           <p class="card-detail">Hey! Enthusiasts of Battlegrounds Mobile India, Explore the strategic realm of
             fighting, sharpshooting, and survival. Are you ready to show off your gaming and IT skills?<br>
-            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /person
+            Registration fee: <b style="color: #18116B !important; font-size: 16px;">&#8377 99</b> /team
           </p>
 
           <div class=" but">
