--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -720,7 +720,7 @@
                 </svg>
               </span>
               <a href="../../Competitions Drafts W'24/Core events/CIVIL_COLLOQUIA__Monika[1] (1).docx"
-                download="truss the frame">
+                download="CIVIL_COLLOQUIA__Monika[1] (1).docx">
               <span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
