--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -171,7 +171,7 @@
         </div>
       </div>
     </div>
-    <div class="card-wrapper">
+    <!-- <div class="card-wrapper">
       <div class="card card-stadd">
         <h1>Oracle Primavera P6</h1>
 
@@ -194,7 +194,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="card-wrapper">
       <div class="card card-robot">
         <h1>Embedded systems with Robotics & IoT</h1>
@@ -220,7 +220,7 @@
         </div>
       </div>
     </div>
-    <div class="card-wrapper">
+    <!-- <div class="card-wrapper">
       <div class="card card-ui">
         <h1>Product & UI UX Design</h1>
 
@@ -244,7 +244,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="card-wrapper">
       <div class="card card-data-science">
         <h1>Data Science</h1>
@@ -270,7 +270,7 @@
         </div>
       </div>
     </div>
-    <div class="card-wrapper">
+    <!-- <div class="card-wrapper">
       <div class="card card-digital">
         <h1>Digital Marketing</h1>
 
@@ -294,7 +294,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="card-wrapper">
       <div class="card card-drone">
         <h1>RC Aircraft Fabrication</h1>
