--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -286,7 +286,7 @@
         </label>
       </div>
 
-      <div class="card">
+      <!-- <div class="card">
         <input id="card27" type="checkbox">
         <label class="tgl-btn" for="card27"><span></span></label>
         <label for="card27" class="tgl-view">
@@ -327,7 +327,7 @@
             </button>
           </div>
         </label>
-      </div>
+      </div> -->
 
     </div>
 
