--- a/pages/workshops/Webpages/Artificial_Intelligence_&_Machine_Learning.html
+++ b/pages/workshops/Webpages/Artificial_Intelligence_&_Machine_Learning.html
@@ -34,34 +34,34 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
-
     </ul>
 
   </nav>
 
   <div style="display: flex;">
+
     <div class="containerg lap">
       <div class="bars"></div>
     </div>
   </div>
   <nav class="lap" style="top: 0 !important;width: 100vw;">
-    <a href="../index.html" class="close">
+    <div class="close">
       <div></div>
-    </a>
+    </div>
     <ul>
 
       <li><a href="../../about_us/">About us</a></li>
       <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../accomdations/">Stay and passes/a></li>
+      <li><a href="../../accomdations/">Stay and passes</a></li>
       <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../../workshops/">Workshops</a></li>
       <li><a href="../../competitions/index.html">Competitions</a></li>
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
@@ -76,7 +76,7 @@
             <span> REGISTER</span>
           </button>
         </a>
-        
+
         <button class="btn custom-btn btn-5 download " style="margin-bottom: 30px;"><span> DOWNLOAD</span></button>
         <!-- <button class="btn custom-btn btn-5 download " style="margin-bottom: 30px;"><span> ACCOMMODATION</span></button> -->
       </div>
