--- a/pages/workshops/Webpages/Ethical_hacking_&_Cyber_security.html
+++ b/pages/workshops/Webpages/Ethical_hacking_&_Cyber_security.html
@@ -34,7 +34,7 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
 
@@ -61,7 +61,7 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
@@ -107,7 +107,7 @@
               <h3>Dates</h3>
               <span>&nbsp;&nbsp;9 <sup>th</sup> - 10 <sup>th</sup> March 2024</span>
               <h3>Timings</h3>
-              <span>&nbsp;&nbsp;2:00 PM - 5:00 PM</span>
+              <span>&nbsp;&nbsp;9:00 PM - 12:00 PM</span>
             </div>
           </div>
           <div class="tab">
