--- a/pages/workshops/Webpages/ds.html
+++ b/pages/workshops/Webpages/ds.html
@@ -34,19 +34,14 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
 
   </nav>
 
   <div style="display: flex;">
-    <div style="left: 0;width: 10vw;">
-      <a class="img" href="../../index.html">
-        <img src="../../wissicon.png" alt=""
-          style="left:5% !important;position: absolute;width:min(15vw,10vh) ; top: 2.5%;">
-      </a>
-    </div>
+    
     <div class="containerg lap">
       <div class="bars"></div>
     </div>
@@ -66,7 +61,7 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
