--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -37,55 +37,45 @@
       </a>
     </div>
     <ul>
-      <li><a href="../about_us/">About us</a></li>
-      <li><a href="../competitions/">Competitions</a></li>
-      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">Stay & passes</a></li>
-      <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
-      <li><a href="../workshops/">Workshops</a></li>
-      <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
-      <li><a href="../teampage/">Team</a></li>
-      <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
-      <li><a href="../reach_Us/">Reach Us</a></li>
 
+      <li><a href="../../about_us/">About us</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../../accomdations/">Stay and passes</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../../workshops/">Workshops</a></li>
+      <li><a href="../../competitions/index.html">Competitions</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../../teampage/">Team</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
+      <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
+
   </nav>
 
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-
-  <div style="left: 0;width: 10vw;">
-    <a class="img" href="../../index.html">
-      <img src="../../imagesnew/wissicon.png" alt=""
-        style="left:5% !important;position: absolute;width:min(10vh,15vw) ; top: 2.5%;">
-    </a>
+  <div style="display: flex;">
+    
+    <div class="containerg lap">
+      <div class="bars"></div>
+    </div>
   </div>
-  <div class="containerg lap">
-    <div class="bars"></div>
-  </div>
-
   <nav class="lap" style="top: 0 !important;width: 100vw;">
     <div class="close">
       <div></div>
     </div>
     <ul>
-      <li><a href="../about_us/">About us</a></li>
-      <li><a href="../competitions/">Competitions</a></li>
-      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">Stay & passes</a></li>
-      <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
-      <li><a href="../workshops/">Workshops</a></li>
-      <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
-      <li><a href="../teampage/">Team</a></li>
-      <li><a href="../under-construction-template-master/index.html">Sponsors</a></li>
-      <li><a href="../reach_Us/">Reach Us</a></li>
 
+      <li><a href="../../about_us/">About us</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../../accomdations/">Stay and passes</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../../workshops/">Workshops</a></li>
+      <li><a href="../../competitions/index.html">Competitions</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../../teampage/">Team</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
+      <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
   <div class="cur" id="circle" style="position: absolute;">
