--- a/pages/workshops/Webpages/Embedded_systems_with_Robotics_&_IoT.html
+++ b/pages/workshops/Webpages/Embedded_systems_with_Robotics_&_IoT.html
@@ -34,7 +34,7 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
 
@@ -61,7 +61,7 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
