--- a/pages/workshops/Webpages/Product_Management_and_Risk_Analysis_using_Oracle_Primavara.html
+++ b/pages/workshops/Webpages/Product_Management_and_Risk_Analysis_using_Oracle_Primavara.html
@@ -25,22 +25,23 @@
     </div>
     <ul>
 
-      <li><a href="../../../about_us/">About us</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../../accomdations/">Stay and passes</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Exhibits</a></li>
-      <li><a href="../../../workshops/">Workshops</a></li>
-      <li><a href="../../../competitions/index.html">Competitions</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Highlights</a></a></li>
-      <li><a href="../../../teampage/">Team</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Sponsors</a></li>
-      <li><a href="../../../reach_Us/">Reach Us</a></li>
+      <li><a href="../../about_us/">About us</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../../accomdations/">Stay and passes</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../../workshops/">Workshops</a></li>
+      <li><a href="../../competitions/index.html">Competitions</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../../teampage/">Team</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
+      <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
 
   </nav>
 
   <div style="display: flex;">
+    
     <div class="containerg lap">
       <div class="bars"></div>
     </div>
@@ -51,17 +52,17 @@
     </div>
     <ul>
 
-      <li><a href="../../../about_us/">About us</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../../accomdations/">Stay and passes</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Exhibits</a></li>
-      <li><a href="../../../workshops/">Workshops</a></li>
-      <li><a href="../../../competitions/index.html">Competitions</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Highlights</a></a></li>
-      <li><a href="../../../teampage/">Team</a></li>
-      <li><a href="../../../under-construction-template-master/index.html">Sponsors</a></li>
-      <li><a href="../../../reach_Us/">Reach Us</a></li>
+      <li><a href="../../about_us/">About us</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../../accomdations/">Stay and passes</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../../workshops/">Workshops</a></li>
+      <li><a href="../../competitions/index.html">Competitions</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../../teampage/">Team</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
+      <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
   <div class="wrapper">
