--- a/pages/workshops/Webpages/dm.html
+++ b/pages/workshops/Webpages/dm.html
@@ -35,13 +35,14 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
 
   </nav>
 
   <div style="display: flex;">
+    
     <div class="containerg lap">
       <div class="bars"></div>
     </div>
@@ -61,7 +62,7 @@
       <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
       <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
       <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Sponsors</a></li>
+      <li><a href="../../sponsors/index.html">Sponsors</a></li>
       <li><a href="../../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
