--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us</title>
+  <title>Wissenaire'24 | Sponsors</title>
   <link rel="icon" href="../../imagesnew/favicon.png" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
