nav bar changes

--- a/pages/guests/index.html
+++ b/pages/guests/index.html
@@ -17,7 +17,7 @@
 
 
 
-  <button class="navbutton laptop" style="background-color: red;z-index:10;color:blue"><i
+  <button class="navbutton laptop" style="background-color: aliceblue;z-index:10;color:blue"><i
       class="fa-solid fa-bars"></i></button>
   <nav dir="rtl" class="lapnav laptop">
     <div class="logo">
@@ -28,17 +28,17 @@
     </div>
     <ul>
 
-      <li><a href="../../about_us/">About us</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../accomdations/">Stay and passes</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
-      <li><a href="../../workshops/">Workshops</a></li>
-      <li><a href="../../competitions/index.html">Competitions</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
-      <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../sponsors/index.html">Sponsors</a></li>
-      <li><a href="../../reach_Us/">Reach Us</a></li>
+      <li><a href="../about_us/">About us</a></li>
+      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../accomdations/">Stay and passes</a></li>
+      <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../workshops/">Workshops</a></li>
+      <li><a href="../competitions/index.html">Competitions</a></li>
+      <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../teampage/">Team</a></li>
+      <li><a href="../sponsors/index.html">Sponsors</a></li>
+      <li><a href="../reach_Us/">Reach Us</a></li>
     </ul>
 
   </nav>
@@ -55,17 +55,17 @@
     </div>
     <ul>
 
-      <li><a href="../../about_us/">About us</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../accomdations/">Stay and passes</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
-      <li><a href="../../workshops/">Workshops</a></li>
-      <li><a href="../../competitions/index.html">Competitions</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
-      <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../sponsors/index.html">Sponsors</a></li>
-      <li><a href="../../reach_Us/">Reach Us</a></li>
+      <li><a href="../about_us/">About us</a></li>
+      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../accomdations/">Stay and passes</a></li>
+      <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../workshops/">Workshops</a></li>
+      <li><a href="../competitions/index.html">Competitions</a></li>
+      <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../teampage/">Team</a></li>
+      <li><a href="../sponsors/index.html">Sponsors</a></li>
+      <li><a href="../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
   <div class="cur" id="circle" style="position: absolute;">
