--- a/pages/under-construction-template-master/index.html
+++ b/pages/under-construction-template-master/index.html
@@ -65,7 +65,7 @@
     </div>
     <ul>
       <li><a href="../about_us/index.html">About Us</a></li>
-      <li><a href="../competitions/">Competitions</a></li>
+      <li><a href="../competitions/index.html">Competitions</a></li>
       <li><a href="../under-construction-template-master/">Guests</a></li>
       <li><a href="../accomdations/">Stay & passes</a></li>
       <li><a href="../under-construction-template-master/">Exhibits</a></li>
