--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -153,11 +153,11 @@
       <img class="spns" src="./pics/MSTC-logo.png" alt="">
       <img class="spns" src="./pics/Copy of IMFA LOGO_page-0001.jpg" alt="">
       <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
-      <img class="spns" src="./pics/Apollo-247.jpg" alt="">
+      <img class="spns" src="./pics/Apollo-247.jpg" alt=""> 
       <img class="spns" src="./pics/2560px-ICICI_Bank_Logo.svg.jpg" alt="">
       <img class="spns" src="./pics/Copy of UCO BANK LOGO.jpg" alt="">
       <img class="spns" src="./pics/Optcl logo-Final-revised - 2012 - Colour.jpg" alt="">
-      <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="" style="">
+      <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="">
     </div>
   </div>
   <script src="../../js/script.js"></script>
