--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -119,18 +119,18 @@
     <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
   </div>-->
   <div class="part">
-    <h2 class="title">title partner</h2>
+    <h2 class="title">title sponsor</h2>
     <img class="spns" src="./pics/OCCL LOGO.jpg" alt="">
   </div>
   <div class="part">
-    <h2 class="title">diamond sponsor</h2>
+    <h2 class="title">diamond sponsors</h2>
     <div class="flex">
       <img class="spns" src="./pics/Ramco Cement English-Logo.png" alt="">
       <img class="spns" src="./pics/Pranyas.png" alt="">
     </div>
   </div>
   <div class="part">
-    <h2 class="title">gold sponsor</h2>
+    <h2 class="title">gold sponsors</h2>
     <div class="flex">
       <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;">
       <img class="spns" src="./pics/Kkr logo.jpg" alt="" style="aspect-ratio: 5/4;">
@@ -139,7 +139,7 @@
     </div>
   </div>
   <div class="part">
-    <h2 class="title">silver sponsor</h2>
+    <h2 class="title">silver sponsors</h2>
     <div class="flex">
       <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
       <img class="spns" src="./pics/images.jpg" alt="">
@@ -148,7 +148,7 @@
     </div>
   </div>
   <div class="part">
-    <h2 class="title">associate partner</h2>
+    <h2 class="title">associate Sponsors</h2>
     <div class="flex">
       <img class="spns" src="./pics/MSTC-logo.png" alt="">
       <img class="spns" src="./pics/Copy of IMFA LOGO_page-0001.jpg" alt="">
