--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -119,36 +119,39 @@
     <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
   </div>-->
   <div class="part">
-    <h2 class="title">title sponsor</h2>
+    <h2 class="title">Title Sponsor</h2>
     <img class="spns" src="./pics/OCCL LOGO.jpg" alt="">
   </div>
   <div class="part">
-    <h2 class="title">diamond sponsors</h2>
+    <h2 class="title">Diamond Sponsors</h2>
     <div class="flex">
+       <img class="spns" src="./pics/Pranyas.png" alt="">
       <img class="spns" src="./pics/Ramco Cement English-Logo.png" alt="">
-      <img class="spns" src="./pics/Pranyas.png" alt="">
     </div>
   </div>
   <div class="part">
-    <h2 class="title">gold sponsors</h2>
+    <h2 class="title">Gold Sponsors</h2>
     <div class="flex">
-      <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;">
-      <img class="spns" src="./pics/Kkr logo.jpg" alt="" style="aspect-ratio: 5/4;">
       <img class="spns" src="./pics/DIC logo.png" alt="">
       <img class="spns" src="./pics/OCAC_logo.jpeg" alt="">
+      <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;">
+      <img class="spns" src="./pics/Kkr logo.jpg" alt="" style="aspect-ratio: 5/4;">
+      <img class="spns" src="./pics/applied materials blue bg 1_page-0001." alt="">
+  
     </div>
   </div>
-  <div class="part">
-    <h2 class="title">silver sponsors</h2>
+   <div class="part">
+    <h2 class="title">Silver Sponsors</h2>
     <div class="flex">
+      <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
+      <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
       <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
       <img class="spns" src="./pics/images.jpg" alt="">
       <img class="spns" src="./pics/IBL Logo Burgundy Colour.jpg" alt="">
-      <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
     </div>
   </div>
   <div class="part">
-    <h2 class="title">associate Sponsors</h2>
+    <h2 class="title">Associate Sponsors</h2>
     <div class="flex">
       <img class="spns" src="./pics/MSTC-logo.png" alt="">
       <img class="spns" src="./pics/Copy of IMFA LOGO_page-0001.jpg" alt="">
@@ -160,6 +163,11 @@
       <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="">
     </div>
   </div>
+ 
+  
+
+
+  
   <script src="../../js/script.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
