--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -79,27 +79,26 @@
     Sponsors
   </h1>
   <div class="part">
-    <h2 class="title">official short audio partner</h2>
+    <h2 class="title">Official Short Audio Partner</h2>
     <img class="spns" src="./pics/Sunosunao-logo_page-0001.jpg" alt="">
   </div>
   <div class="part">
-    <h2 class="title"> official financial partner</h2>
+    <h2 class="title"> Official Financial Advisory Partner</h2>
     <img class="spns" src="./pics/Logo mintbox.png" alt="">
   </div>
   <div class="part">
-    <h2 class="title"> official social partner</h2>
+    <h2 class="title"> Official Social Impact Partner</h2>
     <img class="spns" src="./pics/Pranyas.png" alt="">
-  </div><!--
-  <div class="part">
+  </div>
+  <!--<div class="part">
     <h2 class="title">official media partner</h2>
-    <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
   </div>-->
   <div class="part">
-    <h2 class="title">official pharmeceutical partner</h2>
+    <h2 class="title">Official Pharmaceutical pPrtner</h2>
     <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
   </div>
   <div class="part">
-    <h2 class="title">official health partner</h2>
+    <h2 class="title">Official Health Partner</h2>
     <img class="spns" src="./pics/images.jpg" alt="">
   </div><!--
   <div class="part">
@@ -107,17 +106,19 @@
     <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
   </div>-->
   <div class="part">
-    <h2 class="title">official robotics partner</h2>
+    <h2 class="title">Official Robotics Partner</h2>
     <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
   </div>
   <div class="part">
-    <h2 class="title">official educational partner</h2>
+    <h2 class="title">Official EducatioN Partner</h2>
     <img class="spns" src="./pics/Kkr logo.jpg" alt="">
-  </div><!--
-  <div class="part">
+  </div>
+  <!--- <div class="part">
     <h2 class="title">zandora</h2>
     <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
   </div>-->
+
+  
   <div class="part">
     <h2 class="title">Title Sponsor</h2>
     <img class="spns" src="./pics/OCCL LOGO.jpg" alt="">
@@ -137,6 +138,7 @@
       <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;">
       <img class="spns" src="./pics/Kkr logo.jpg" alt="" style="aspect-ratio: 5/4;">
       <img class="spns" src="./pics/applied materials blue bg 1_page-0001." alt="">
+      <!-- HDFC LOGO-->
   
     </div>
   </div>
@@ -144,10 +146,10 @@
     <h2 class="title">Silver Sponsors</h2>
     <div class="flex">
       <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
-      <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
-      <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
-      <img class="spns" src="./pics/images.jpg" alt="">
       <img class="spns" src="./pics/IBL Logo Burgundy Colour.jpg" alt="">
+      <img class="spns" src="./pics/images.jpg" alt="">
+      <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
+      <!-- JINDAL STEEL AND POWER-->
     </div>
   </div>
   <div class="part">
@@ -161,6 +163,7 @@
       <img class="spns" src="./pics/2560px-ICICI_Bank_Logo.svg.jpg" alt=""> 
       <img class="spns" src="./pics/Optcl logo-Final-revised - 2012 - Colour.jpg" alt="">
       <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="">
+      <!-- SECUODSOFT-->
     </div>
   </div>
  
