web hackathon pdf + sponsorship page

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   </a>
                 </li>
                 <li class="nav-item hidden">
-                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/under-construction-template-master/">
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/sponsors/">
                     <span style="font-family: 'MyFont'; color: white">SPONSORS</span>
                   </a>
                 </li>
@@ -269,7 +269,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" style="font-size: 1vw" href="./pages/under-construction-template-master/">
+              <a class="navbar-brand" style="font-size: 1vw" href="./pages/sponsors/">
                 <span style="font-family: 'MyFont'; color: white">SPONSORS</span>
               </a>
             </li>
