--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -137,7 +137,7 @@
       <img class="spns" src="./pics/OCAC_logo.jpeg" alt="">
       <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;">
       <img class="spns" src="./pics/Kkr logo.jpg" alt="" style="aspect-ratio: 5/4;">
-      <img class="spns" src="./pics/applied materials blue bg 1_page-0001." alt="">
+      <img class="spns" src="./pics/applied materials blue bg 1_page-0001.jpg" alt="">
       <!-- HDFC LOGO-->
   
     </div>
