--- a/pages/competitions/index.html
+++ b/pages/competitions/index.html
@@ -467,7 +467,8 @@
                     d="M290,95c0,11.046-8.954,20-20,20c0,0-90,0-120,0s-120,0-120,0c-11.046,0-20-9-20-20c0-8.715,0-25.875,0-34.5c0-7.625,0-22.774,0-30.5c0-11.625,8.954-20,20-20c0,0,90,0,120,0s120,0,120,0c11.046,0,20,8.954,20,20c0,7.25,0,22.875,0,30.5C290,69.125,290,84.5,290,95z" />
                 </svg>
               </span>
-              <span class="button__text">Know More</span>
+              <a href="../../Competitions Drafts W'24/Coding Events/WebnD X Wissenaire Hackathon(1) (2) (1).pdf" download>
+              <span class="button__text">Know More</span></a>
             </button>
             <button class="button button--line button--effect-2">
               <span class="morph-shape"
