sponsors added+web hackathon pdf

--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -72,12 +72,63 @@
 
     </ul>
   </nav>
-  <div class="cur" id="circle" style="position: absolute;">
-    <img class="satelite" src="../../imagesnew/Untitled-1.png" alt="" />
-  </div>
+
   <h1 class="big-tittle">
     Sponsors
   </h1>
+  <div class="part">
+    <h2 class="title">Title Sponsor</h2>
+    <img class="spns" src="./pics/OCCL LOGO.jpg" alt="">
+  </div>
+  <div class="part">
+    <h2 class="title">Diamond Sponsors</h2>
+    <div class="flex"><!--
+      <img class="spns" src="./pics/Pranyas.png" alt="">-->
+      <img class="spns" src="./pics/Ramco Cement English-Logo.png" alt="">
+    </div>
+  </div>
+  <div class="part">
+    <h2 class="title">Gold Sponsors</h2>
+    <div class="flex">
+      <img class="spns" src="./pics/DIC logo.png" alt="">
+      <img class="spns" src="./pics/OCAC_logo.jpeg" alt="">
+      <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;">
+      <img class="spns" src="./pics/applied materials blue bg 1_page-0001.jpg" alt="">
+      <!-- HDFC LOGO-->
+
+    </div>
+  </div>
+  <div class="part">
+    <h2 class="title">Silver Sponsors</h2>
+    <div class="flex">
+      <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
+      <img class="spns" src="./pics/IBL Logo Burgundy Colour.jpg" alt="">
+      <img class="spns" src="./pics/jindal logo .png" style="background: white;padding: 20px;" alt="">
+
+      <!-- JINDAL STEEL AND POWER-->
+    </div>
+  </div>
+  <div class="part">
+    <h2 class="title">Associate Sponsors</h2>
+    <div class="flex">
+      <img class="spns" src="./pics/MSTC-logo.png" alt="">
+      <img class="spns" src="./pics/Copy of IMFA LOGO_page-0001.jpg" alt="">
+      <!-- <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
+      <img class="spns" src="./pics/Apollo-247.jpg" alt=""> -->
+      <img class="spns" src="./pics/Apollo_logo.jpeg" alt="">
+      <img class="spns" src="./pics/Copy of UCO BANK LOGO.jpg" alt="">
+      <img class="spns" src="./pics/2560px-ICICI_Bank_Logo.svg.jpg" alt=""
+        style="width:500px;max-width: 80vw;align-self: 1/5;">
+      <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="">
+      <img class="spns" src="./pics/Optcl logo-Final-revised - 2012 - Colour.jpg" alt="">
+      <img class="spns" src="./pics/secuodsoft.png" style="background: white;padding: 20px;" alt="">
+      <!-- SECUODSOFT-->
+    </div>
+  </div>
+
+  <div class="cur" id="circle" style="position: absolute;">
+    <img class="satelite" src="../../imagesnew/Untitled-1.png" alt="" />
+  </div>
   <div class="part">
     <h2 class="title">Official Short Audio Partner</h2>
     <img class="spns" src="./pics/Sunosunao-logo_page-0001.jpg" alt="">
@@ -90,21 +141,17 @@
     <h2 class="title"> Official Social Impact Partner</h2>
     <img class="spns" src="./pics/Pranyas.png" alt="">
   </div>
-  <!--<div class="part">
-    <h2 class="title">official media partner</h2>
-  </div>-->
   <div class="part">
-    <h2 class="title">Official Pharmaceutical pPrtner</h2>
-    <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
+    <h2 class="title">Official Pharmaceutical partner</h2>
+    <div class="flex">
+      <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
+      <img class="spns" src="./pics/Apollo-247.jpg" alt="">
+    </div>
   </div>
   <div class="part">
     <h2 class="title">Official Health Partner</h2>
     <img class="spns" src="./pics/images.jpg" alt="">
-  </div><!--
-  <div class="part">
-    <h2 class="title">1stop</h2>
-    <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
-  </div>-->
+  </div>
   <div class="part">
     <h2 class="title">Official Robotics Partner</h2>
     <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
@@ -113,64 +160,31 @@
     <h2 class="title">Official EducatioN Partner</h2>
     <img class="spns" src="./pics/Kkr logo.jpg" alt="">
   </div>
-  <!--- <div class="part">
-    <h2 class="title">zandora</h2>
-    <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
-  </div>-->
+  <div class="part">
+    <h2 class="title">Official radio Partner</h2>
+    <img class="spns" src="./pics/Redfm logo (1)_page-0001.jpg" alt="">
+  </div>
+  <div class="part">
+    <h2 class="title">Official ngo Partner</h2>
+    <img class="spns" src="./pics/Untitled.jpg" alt="" style="min-width: 30vw;">
+  </div>
+  <div class="part">
+    <h2 class="title">Official coding Partner</h2>
+    <img class="spns" src="./pics/codex.png" alt="" style="min-width: 30vw;">
+  </div>
 
-  
   <div class="part">
-    <h2 class="title">Title Sponsor</h2>
-    <img class="spns" src="./pics/OCCL LOGO.jpg" alt="">
-  </div>
-  <div class="part">
-    <h2 class="title">Diamond Sponsors</h2>
+    <h2 class="title">Official media Partner</h2>
     <div class="flex">
-       <img class="spns" src="./pics/Pranyas.png" alt="">
-      <img class="spns" src="./pics/Ramco Cement English-Logo.png" alt="">
+      <img class="spns" src="./pics/odisha shines.jpg" alt="">
+      <img class="spns" src="./pics/bhubaneswarbuzz.jpg" alt="">
+      <img class="spns" src="./pics/rourkela.jpg" alt="">
     </div>
   </div>
   <div class="part">
-    <h2 class="title">Gold Sponsors</h2>
-    <div class="flex">
-      <img class="spns" src="./pics/DIC logo.png" alt="">
-      <img class="spns" src="./pics/OCAC_logo.jpeg" alt="">
-      <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;">
-      <img class="spns" src="./pics/Kkr logo.jpg" alt="" style="aspect-ratio: 5/4;">
-      <img class="spns" src="./pics/applied materials blue bg 1_page-0001.jpg" alt="">
-      <!-- HDFC LOGO-->
-  
-    </div>
+    <h2 class="title">Official social media Partner</h2>
+    <img class="spns" src="./pics/travel real odisha.jpg" alt="">
   </div>
-   <div class="part">
-    <h2 class="title">Silver Sponsors</h2>
-    <div class="flex">
-      <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
-      <img class="spns" src="./pics/IBL Logo Burgundy Colour.jpg" alt="">
-      <img class="spns" src="./pics/images.jpg" alt="">
-      <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
-      <!-- JINDAL STEEL AND POWER-->
-    </div>
-  </div>
-  <div class="part">
-    <h2 class="title">Associate Sponsors</h2>
-    <div class="flex">
-      <img class="spns" src="./pics/MSTC-logo.png" alt="">
-      <img class="spns" src="./pics/Copy of IMFA LOGO_page-0001.jpg" alt="">
-      <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
-      <img class="spns" src="./pics/Apollo-247.jpg" alt=""> 
-      <img class="spns" src="./pics/Copy of UCO BANK LOGO.jpg" alt="">
-      <img class="spns" src="./pics/2560px-ICICI_Bank_Logo.svg.jpg" alt=""> 
-      <img class="spns" src="./pics/Optcl logo-Final-revised - 2012 - Colour.jpg" alt="">
-      <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="">
-      <!-- SECUODSOFT-->
-    </div>
-  </div>
- 
-  
-
-
-  
   <script src="../../js/script.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
