--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -116,7 +116,7 @@
       <!-- <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
       <img class="spns" src="./pics/Apollo-247.jpg" alt=""> -->
       <img class="spns" src="./pics/Apollo_logo.jpeg" alt="">
-      <img class="spns" src="./pics/Copy of UCO BANK LOGO.jpg" alt="">
+      <img class="spns" src="./pics/Copy of UCO BANK LOGO.jpg" alt="" style="aspect-ratio: 1/1 !important;">
       <img class="spns" src="./pics/2560px-ICICI_Bank_Logo.svg.jpg" alt=""
         style="width:500px;max-width: 80vw;align-self: 1/5;">
       <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="">
@@ -154,7 +154,7 @@
   </div>
   <div class="part">
     <h2 class="title">Official Robotics Partner</h2>
-    <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="">
+    <img class="spns" src="./pics/Copy of Copy of IRL LOGO 2023.png" alt="" style="background: white;padding: 20px;">
   </div>
   <div class="part">
     <h2 class="title">Official EducatioN Partner</h2>
@@ -181,10 +181,10 @@
       <img class="spns" src="./pics/rourkela.jpg" alt="">
     </div>
   </div>
-  <div class="part">
+  <!-- <div class="part">
     <h2 class="title">Official social media Partner</h2>
     <img class="spns" src="./pics/travel real odisha.jpg" alt="">
-  </div>
+  </div> -->
   <script src="../../js/script.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
