--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -170,7 +170,7 @@
   </div>
   <div class="part">
     <h2 class="title">Official coding Partner</h2>
-    <img class="spns" src="./pics/codex.png" alt="" style="min-width: 30vw;">
+    <img class="spns" src="./pics/codex.png" alt="" style="min-width: 30vw;background-color: white;padding: 20px;">
   </div>
 
   <div class="part">
