guest page + highlights + teampage +sponsors change

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   </a>
                 </li>
                 <li class="nav-item hidden">
-                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/under-construction-template-master/index.html">
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/highlights/">
                     <span style="font-family: 'MyFont'; color: white">HIGHLIGHTS</span>
                   </a>
                 </li>
@@ -259,7 +259,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" style="font-size: 1vw" href="./pages/under-construction-template-master/index.html">
+              <a class="navbar-brand" style="font-size: 1vw" href="./pages/highlights/">
                 <span style="font-family: 'MyFont'; color: white">HIGHLIGHTS</span>
               </a>
             </li>
