--- a/pages/about_us/index.html
+++ b/pages/about_us/index.html
@@ -37,7 +37,7 @@
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../competitions/index.html">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../sponsors/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
@@ -64,7 +64,7 @@
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../competitions/index.html">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../sponsors/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
