--- a/pages/accomdations/index.html
+++ b/pages/accomdations/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wissenaire'24 |Accommodation</title>
+  <title>Wissenaire'24 | Stay and passes</title>
   <link rel="stylesheet" href="./style.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -32,7 +32,7 @@
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../competitions/index.html">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../sponsors/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
@@ -59,7 +59,7 @@
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../competitions/index.html">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../sponsors/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
@@ -68,7 +68,7 @@
   <div class="cur" id="circle" style="position: absolute;">
     <img class="satelite" src="../../imagesnew/Untitled-1.png" alt="" />
   </div>
-  <h1 class="singup" id="head" style="display: flex;justify-content: center;text-align: center;">Accommodations &
+  <h1 class="singup" id="head" style="display: flex;justify-content: center;text-align: center;">Stay  &
     Passes
   </h1>
   <main>
@@ -128,7 +128,7 @@
           <a href="https://forms.gle/oAD4Hpxxjkt8iwhB8"
             style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
             <button class="btn custom-btn btn-5 register">
-              <span style="align-items:center"> click
+              <span style="align-items:center"> Click
                 here</span></a>
         </div>
         <br><br>
@@ -138,19 +138,19 @@ dinner) should be paid separately prior to visiting campus if required.<br>
 3. In Common rooms a maximum of 12 members will be accommodated.`,
         `
       <div style="display: flex;width: 100%;flex-direction: column;justify-content: space-evenly;">
-        <div style="display: flex;width: auto;text-align: center;">
+        <div style="display: flex;width: auto;text-align: center;justify-content:space-evenly;margin:10px;">
           <b style="color: aquamarine;">DAY</b>
           <b style="color: aquamarine;">PRICE </b>
         </div>
-        <div style="display: flex;width: auto;text-align: center;">
+        <div style="display: flex;width: auto;text-align: center;justify-content:space-evenly;margin:10px;">
           <b style="color: aqua;">Day-2(March-9th)</b>
           <p> &#8377 299 only </p>
         </div>
-        <div style="display: flex;width: auto;text-align: center;">
+        <div style="display: flex;width: auto;text-align: center;justify-content:space-evenly;margin:10px;">
           <b style="color: aqua;">Day-3(March-10th)</b>
           <p> &#8377 399 only </p>
         </div>
-        <div style="display: flex;width: auto;text-align: center;">
+        <div style="display: flex;width: auto;text-align: center;justify-content:space-evenly;margin:10px;margin-bottom:20px;">
           <b style="color: aqua;">Day-2+ Day-3 Combo</b>
           <p> &#8377 499 only </p>
         </div>
@@ -176,7 +176,7 @@ dinner) should be paid separately prior to visiting campus if required.<br>
           <a href="https://forms.gle/LS7G6EXk1tJgKF8g7"
             style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
             <button class="btn custom-btn btn-5 register">
-              <span style="align-items:center"> click
+              <span style="align-items:center"> Click
                 here</span>
         </div>
         </button></a>
@@ -197,7 +197,7 @@ dinner) should be paid separately prior to visiting campus if required.<br>
       <a href="https://rzp.io/l/Wfood"
         style="display: flex;justify-content: center;text-decoration: underline;columns: #dadada;">
           <button class="btn custom-btn btn-5 register">
-            <span> click
+            <span> Click
         here</span>
           </button></a>
         </div>
