--- a/pages/reach_Us/index.html
+++ b/pages/reach_Us/index.html
@@ -38,7 +38,7 @@
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../competitions/index.html">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../sponsors/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
@@ -47,7 +47,7 @@
   </nav>
 
   <div style="display: flex;">
-    
+
     <div class="containerg lap">
       <div class="bars"></div>
     </div>
@@ -65,7 +65,7 @@
       <li><a href="../workshops/">Workshops</a></li>
       <li><a href="../competitions/index.html">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
       <li><a href="../sponsors/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
