--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -30,17 +30,16 @@
     </div>
     <ul>
       <li><a href="../about_us/">About us</a></li>
-      <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">Stay & passes</a></li>
+      <li><a href="../accomdations/">Stay and passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
-      <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../competitions/index.html">Competitions</a></li>
+      <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
-      <li><a href="#">Sponsors</a></li>
+      <li><a href="../sponsors/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
-
     </ul>
   </nav>
   <div style="left: 0;width: 10vw;">
@@ -59,17 +58,16 @@
     </div>
     <ul>
       <li><a href="../about_us/">About us</a></li>
-      <li><a href="../competitions/">Competitions</a></li>
       <li><a href="../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../accomdations/">Stay & passes</a></li>
+      <li><a href="../accomdations/">Stay and passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
-      <li><a href="../under-construction-template-master/index.html">Initiatives</a></li>
-      <li><a href="../under-construction-template-master/index.html">Highlights</a></a></li>
+      <li><a href="../competitions/index.html">Competitions</a></li>
+      <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
       <li><a href="../teampage/">Team</a></li>
-      <li><a href="#">Sponsors</a></li>
+      <li><a href="../sponsors/index.html">Sponsors</a></li>
       <li><a href="../reach_Us/">Reach Us</a></li>
-
     </ul>
   </nav>
 
