--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="../../imagesnew/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../../imagesnew/favicon.png" type="image/x-icon">
   <script src="js/snap.svg-min.js"></script>
   <title>Workshops</title>
 </head>
@@ -38,23 +38,23 @@
     </div>
     <ul>
 
-      <li><a href="../../about_us/">About us</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../accomdations/">Stay and passes</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
-      <li><a href="../../workshops/">Workshops</a></li>
-      <li><a href="../../competitions/index.html">Competitions</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
-      <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../sponsors/index.html">Sponsors</a></li>
-      <li><a href="../../reach_Us/">Reach Us</a></li>
+      <li><a href="../about_us/">About us</a></li>
+      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../accomdations/">Stay and passes</a></li>
+      <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../workshops/">Workshops</a></li>
+      <li><a href="../competitions/index.html">Competitions</a></li>
+      <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
+      <li><a href="../teampage/">Team</a></li>
+      <li><a href="../sponsors/index.html">Sponsors</a></li>
+      <li><a href="../reach_Us/">Reach Us</a></li>
     </ul>
 
   </nav>
 
   <div style="display: flex;">
-    
+
     <div class="containerg lap">
       <div class="bars"></div>
     </div>
@@ -65,17 +65,17 @@
     </div>
     <ul>
 
-      <li><a href="../../about_us/">About us</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Guests</a></li>
-      <li><a href="../../accomdations/">Stay and passes</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Exhibits</a></li>
-      <li><a href="../../workshops/">Workshops</a></li>
-      <li><a href="../../competitions/index.html">Competitions</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Intiatives</a></li>
-      <li><a href="../../under-construction-template-master/index.html">Highlights</a></a></li>
-      <li><a href="../../teampage/">Team</a></li>
-      <li><a href="../../sponsors/index.html">Sponsors</a></li>
-      <li><a href="../../reach_Us/">Reach Us</a></li>
+      <li><a href="../about_us/">About us</a></li>
+      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../accomdations/">Stay and passes</a></li>
+      <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
+      <li><a href="../workshops/">Workshops</a></li>
+      <li><a href="../competitions/index.html">Competitions</a></li>
+      <li><a href="../under-construction-template-master/index.html">Intiatives</a></li>
+      <li><a href="../highlights/">Highlights</a></a></li>
+      <li><a href="../teampage/">Team</a></li>
+      <li><a href="../sponsors/index.html">Sponsors</a></li>
+      <li><a href="../reach_Us/">Reach Us</a></li>
     </ul>
   </nav>
   <div class="cur" id="circle" style="position: absolute;">
@@ -99,7 +99,7 @@
             websites.
           </p>
           <div class="button-container">
-            <a href="./Webpages/index.html" style="text-decoration: none;color: aliceblue; width: 260px;" >
+            <a href="./Webpages/index.html" style="text-decoration: none;color: aliceblue; width: 260px;">
               <button>Know More</button>
             </a>
             <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
@@ -124,8 +124,8 @@
           </p>
           <div class="button-container">
             <a href="./Webpages/Ethical_hacking_&_Cyber_security.html"
-                style="text-decoration: none;color: aliceblue; width: 260px;">
-                <button>Know More</button>
+              style="text-decoration: none;color: aliceblue; width: 260px;">
+              <button>Know More</button>
             </a>
             <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
@@ -150,7 +150,7 @@
           </p>
           <div class="button-container">
             <a href="./Webpages/Artificial_Intelligence_&_Machine_Learning.html"
-                style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
+              style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
             <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
@@ -199,7 +199,7 @@
           </p>
           <div class="button-container">
             <a href="./Webpages/Embedded_systems_with_Robotics_&_IoT.html"
-                style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
+              style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
             </a>
             <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
@@ -248,8 +248,8 @@
             informed decisions and predictions.
           </p>
           <div class="button-container">
-            <a href="./Webpages/ds.html"
-                style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
+            <a href="./Webpages/ds.html" style="text-decoration: none;color: aliceblue; width: 260px;"><button
+                onclick="">Know More</button>
             </a>
             <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
@@ -298,8 +298,8 @@
             create functional and efficient RC aircraft.
           </p>
           <div class="button-container">
-            <a href="./Webpages/rc.html"
-                style="text-decoration: none;color: aliceblue; width: 260px;"><button onclick="">Know More</button>
+            <a href="./Webpages/rc.html" style="text-decoration: none;color: aliceblue; width: 260px;"><button
+                onclick="">Know More</button>
             </a>
             <a href="https://forms.gle/iZhdQ9BBbWdm25fU8" style="text-decoration: none;color: aliceblue; width:260px">
               <button>
