--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   <span style="font-family: 'MyFont'; color: white">REACH US</span>
                 </a></li>
                 <li class="nav-item hidden">
-                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/under-construction-template-master/index.html">
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/guests/">
                     <span style="font-family: 'MyFont'; color: white">GUESTS</span>
                   </a>
                 </li>
@@ -234,7 +234,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" style="font-size: 1vw" href="./pages/under-construction-template-master/index.html">
+              <a class="navbar-brand" style="font-size: 1vw" href="./pages/guests/">
                 <span style="font-family: 'MyFont'; color: white">GUESTS</span>
               </a>
             </li>
