--- a/pages/guests/index.html
+++ b/pages/guests/index.html
@@ -28,7 +28,7 @@
         <ul>
             <li><a href="../about_us/">About us</a></li>
             <li><a href="../competitions/">Competitions</a></li>
-            <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+            <li><a href="../guests/">Guests</a></li>
             <li><a href="../accomdations/">Stay & passes</a></li>
             <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
             <li><a href="../workshops/">Workshops</a></li>
@@ -57,7 +57,7 @@
         <ul>
             <li><a href="../about_us/">About us</a></li>
             <li><a href="../competitions/">Competitions</a></li>
-            <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+            <li><a href="../guests/">Guests</a></li>
             <li><a href="../accomdations/">Stay & passes</a></li>
             <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
             <li><a href="../workshops/">Workshops</a></li>
