--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -39,7 +39,7 @@
     <ul>
 
       <li><a href="../about_us/">About us</a></li>
-      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../guests/">Guests</a></li>
       <li><a href="../accomdations/">Stay and passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
@@ -66,7 +66,7 @@
     <ul>
 
       <li><a href="../about_us/">About us</a></li>
-      <li><a href="../under-construction-template-master/index.html">Guests</a></li>
+      <li><a href="../guests/">Guests</a></li>
       <li><a href="../accomdations/">Stay and passes</a></li>
       <li><a href="../under-construction-template-master/index.html">Exhibits</a></li>
       <li><a href="../workshops/">Workshops</a></li>
