--- a/pages/guests/index.html
+++ b/pages/guests/index.html
@@ -71,7 +71,7 @@
     <div class="cur" id="circle" style="position: absolute;">
         <img class="satelite" src="../../imagesnew/Untitled-1.png" alt="" />
     </div>
-    <h1 class="heading">CHIEF GUEST</h1>
+    <h1 class="heading" style="margin-top: 10vh;">CHIEF GUEST</h1>
     <div class="card">
         <div class="top-section">
             <div class="border"></div>
@@ -164,11 +164,11 @@
             </div>
         </div>
     </div>
+    <script src="../about_us/index.js"></script>
     <script src="../../js/script.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
 </body>
 
 </html>
